--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    
+    <header>
+        <nav class="w-11/12 mx-auto flex justify-between border-b-2 border-[#17171720] p-5">
+            <div class="logo">
+                <img src="./assests/Logo.png" alt="">
+            </div>
+            <div class="sort">
+                <button class="btn">Sort by view</button>
+            </div>
+            <div class="blog">
+                <button class="btn bg-[#FF1F3D] text-white">Blog</button>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
