categories are loaded dynamically

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="w-11/12 mx-auto flex justify-between border-b-2 border-[#17171720] p-5">
+        <nav class="w-11/12 mx-auto flex justify-between border-b-2 border-[#17171720] py-5">
             <div class="logo">
-                <img src="./assests/Logo.png" alt="">
+                <img class="w-32" src="./assests/Logo.png" alt="">
             </div>
             <div class="sort">
                 <button class="btn">Sort by view</button>
@@ -22,5 +22,13 @@
             </div>
         </nav>
     </header>
+    <!-- category -->
+     <nav id="category-container" class="flex justify-center gap-5 py-5">
+        <div>
+            <button class="btn btn-sm bg-[#FF1F3D] text-white">All</button>
+        </div>
+     </nav>
+     <!-- js file -->
+      <script src="script/index.js"></script>
 </body>
 </html>
