--- a/index.html
+++ b/index.html
@@ -1,34 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PH-Tube</title>
     <!-- daisy ui -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@5"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="w-11/12 mx-auto flex justify-between border-b-2 border-[#17171720] py-5">
-            <div class="logo">
-                <img class="w-32" src="./assests/Logo.png" alt="">
-            </div>
-            <div class="sort">
-                <button class="btn">Sort by view</button>
-            </div>
-            <div class="blog">
-                <button class="btn bg-[#FF1F3D] text-white">Blog</button>
-            </div>
-        </nav>
-    </header>
-    <!-- category -->
-     <nav id="category-container" class="flex justify-center gap-5 py-5">
-        <div>
-            <button class="btn btn-sm bg-[#FF1F3D] text-white">All</button>
+      <nav
+        class="w-11/12 mx-auto flex justify-between border-b-2 border-[#17171720] py-5"
+      >
+        <div class="logo">
+          <img class="w-32" src="./assests/Logo.png" alt="" />
         </div>
-     </nav>
-     <!-- js file -->
-      <script src="script/index.js"></script>
-</body>
+        <div class="sort">
+          <button class="btn">Sort by view</button>
+        </div>
+        <div class="blog">
+          <button class="btn bg-[#FF1F3D] text-white">Blog</button>
+        </div>
+      </nav>
+    </header>
+    <!-- category container -->
+    <nav id="category-container" class="flex justify-center gap-5 py-5">
+      <div>
+        <button class="btn btn-sm bg-[#FF1F3D] text-white">All</button>
+      </div>
+    </nav>
+    <!-- video container -->
+    <section
+      id="video-container"
+      class="w-11/12 mx-auto grid grid-cols-4 gap-5"
+    >
+      
+    </section>
+    <!-- js file -->
+    <script src="script/categories.js"></script>
+    <script src="script/videos.js"></script>
+  </body>
 </html>
