load & display data by category

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- category container -->
     <nav id="category-container" class="flex justify-center gap-5 py-5">
       <div>
-        <button class="btn btn-sm bg-[#FF1F3D] text-white">All</button>
+        <button onclick="loadVideos()" class="btn btn-sm bg-[#FF1F3D] text-white">All</button>
       </div>
     </nav>
     <!-- video container -->
@@ -42,6 +42,7 @@
       
     </section>
     <!-- js file -->
+     <script src="script/category-videos.js"></script>
     <script src="script/categories.js"></script>
     <script src="script/videos.js"></script>
   </body>
