handled empty category

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
       id="video-container"
       class="w-11/12 mx-auto grid grid-cols-4 gap-5"
     >
-      
+    <!-- empty video container -->
+     <div class="col-span-full flex flex-col justify-center items-center py-20">
+        <img class="my-4" src="./assests/Icon.png" alt="">
+        <h1 class="text-2xl font-bold">Oops!! Sorry, There is no content here</h1>
+     </div>
     </section>
     <!-- js file -->
      <script src="script/category-videos.js"></script>
