--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
         <div class="logo">
           <img class="w-32" src="./assests/Logo.png" alt="" />
         </div>
-        <div class="sort">
-          <button class="btn">Sort by view</button>
+        <!-- search input -->
+        <div class="search">
+          <label class="input">
+            <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor"><circle cx="11" cy="11" r="8"></circle><path d="m21 21-4.3-4.3"></path></g></svg>
+            <input id="search-input" type="search" required placeholder="Search"/>
+          </label>
         </div>
-        <div class="blog">
-          <button class="btn bg-[#FF1F3D] text-white">Blog</button>
+        <div class="sort">
+          <button class="btn bg-[#FF1F3D] text-white">Sort By View</button>
         </div>
       </nav>
     </header>
@@ -43,6 +47,10 @@
         </button>
       </div>
     </nav>
+    <!-- loader -->
+     <section id="loader" class="text-center py-10 hidden">
+      <span class="loading loading-dots loading-xl"></span>
+     </section>
     <!-- video container -->
     <section
       id="video-container"
