mobile responsive is added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- video container -->
     <section
       id="video-container"
-      class="w-11/12 mx-auto grid grid-cols-4 gap-5"
+      class="w-11/12 mx-auto grid grid-cols-2 lg:grid-cols-4 gap-5"
     >
       <!-- empty video container -->
       <div
